# removepaywallsbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  bot.py  config.py  docker-compose.yml  domains.txt  pyproject.toml  requirements.txt
cogs/: __init__.py  paywall.py
