[project]
name = "removepaywallsbot"
version = "0.1.0"
description = "Discord bot that automatically bypasses article paywalls using removepaywalls.com"
requires-python = ">=3.12"
dependencies = [
    "discord.py==2.6.4",
    "python-dotenv==1.2.1",
    "tldextract==5.3.0",
    "aiohttp==3.13.2",
    "PyNaCl==1.5.0",
]

